update ui,about page

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
@@ -19,10 +19,10 @@
     href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Plus+Jakarta+Sans&family=Roboto+Mono&display=swap"
     rel="stylesheet">
   <script async src="https://unpkg.com/typer-dot-js@0.1.0/typer.js"></script>
-
+  <link rel="icon" href="./logome.png" type="image/x-icon">
   <style>
     body {
-      background: #000;
+      background: #0f172a;
       font-family: 'Roboto Mono', monospace;
     }
   </style>
