update ui,about page

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
   <link rel="icon" href="./logome.png" type="image/x-icon">
   <style>
     body {
-      background: #0f172a;
+      background: #08071b;
       font-family: 'Roboto Mono', monospace;
     }
   </style>
